outputs/j0gram.output
Terminals unused in grammar

    CLASSNAME
    GREATER
    LESS
    EQUAL
    CONTINUE
    ADDEQUAL
    SUBEQUAL
    ISEQUALTO
    NOTEQUALTO
    GREATHERTHANOREQUAL
    GREATERTHANOREQUAL
    LESSTHANOREQUAL
    LOGICALAND
    LOGICALOR
    MULT
    DIVIDE
    MOD


State 6 conflicts: 8 shift/reduce
State 18 conflicts: 8 shift/reduce
State 24 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce
State 183 conflicts: 1 shift/reduce
State 238 conflicts: 8 shift/reduce


Grammar

    0 $accept: ClassDecl $end

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody

    2 ClassBody: '{' ClassBodyDecls '}'
    3          | '{' '}'

    4 ClassBodyDecls: ClassBodyDecl
    5               | ClassBodyDecls ClassBodyDecl

    6 ClassBodyDecl: FieldDecl
    7              | MethodDecl
    8              | ConstructorDecl

    9 FieldDecl: Type VarDecls ';'

   10 Type: INT
   11     | DOUBLE
   12     | BOOL
   13     | STRING
   14     | CHAR
   15     | FLOAT
   16     | LONG
   17     | IDENTIFIER

   18 Name: IDENTIFIER
   19     | QualifiedName

   20 QualifiedName: Name '.' IDENTIFIER
   21              | SpecialName

   22 VarDecls: VarDeclarator
   23         | VarDecls ',' VarDeclarator

   24 VarDeclarator: Name

   25 MethodReturnVal: Type
   26                | VOID

   27 MethodDecl: MethodHeader Block

   28 MethodHeader: PublicStatus StaticStatus MethodReturnVal MethodDeclarator

   29 StaticStatus: STATIC
   30             | %empty

   31 PublicStatus: PUBLIC
   32             | %empty

   33 MethodDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   34 FormalParmListOpt: FormalParmList
   35                  | %empty

   36 FormalParmList: FormalParm
   37               | FormalParmList ',' FormalParm

   38 FormalParm: Type VarDeclarator

   39 ConstructorDecl: PublicStatus ConstructorDeclarator Block
   40                | ConstructorDeclarator Block

   41 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   42 ArgListOpt: ArgList
   43           | %empty

   44 Block: '{' BlockStmts '}'
   45      | '{' '}'

   46 BlockStmts: BlockStmt
   47           | BlockStmts BlockStmt

   48 BlockStmt: LocalVarDeclStmt
   49          | Stmt

   50 LocalVarDeclStmt: LocalVarDecl ';'

   51 LocalVarDecl: Type VarDecls

   52 Stmt: Block
   53     | ';'
   54     | ExprStmt
   55     | BreakStmt
   56     | ReturnStmt
   57     | IfThenStmt
   58     | IfThenElseStmt
   59     | IfThenElseIfStmt
   60     | WhileStmt
   61     | ForStmt
   62     | SwitchBlock
   63     | ArrayDec

   64 ExprStmt: StmtExpr ';'

   65 StmtExpr: Assignment
   66         | MethodCall
   67         | InstantiationExpr
   68         | SpecialName

   69 IfThenStmt: IF '(' Expr ')' Block

   70 IfThenElseStmt: IF '(' Expr ')' Block ELSE Block

   71 IfThenElseIfStmt: IF '(' Expr ')' Block ElseIfSequence
   72                 | IF '(' Expr ')' Block ElseIfSequence ELSE Block

   73 ElseIfSequence: ElseIfStmt
   74               | ElseIfSequence ElseIfStmt

   75 ElseIfStmt: ELSE IfThenStmt

   76 WhileStmt: WHILE '(' Expr ')' Stmt

   77 ForStmt: FOR '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

   78 ForInit: StmtExprList
   79        | LocalVarDecl
   80        | %empty

   81 ExprOpt: Expr
   82        | %empty

   83 ForUpdate: StmtExprList
   84          | %empty

   85 StmtExprList: StmtExpr
   86             | StmtExprList ',' StmtExpr

   87 BreakStmt: BREAK ';'
   88          | BREAK IDENTIFIER ';'

   89 ReturnStmt: RETURN ExprOpt ';'

   90 Primary: Literal
   91        | '(' Expr ')'
   92        | FieldAccess
   93        | MethodCall

   94 Literal: LINT
   95        | LDOUBLE
   96        | LBOOL
   97        | LSTRING
   98        | LCHAR
   99        | HEX
  100        | OCT
  101        | NULLVAL

  102 InstantiationExpr: PUBLIC Name '(' ArgListOpt ')'

  103 ArgList: Expr
  104        | ArgList ',' Expr

  105 FieldAccess: Primary '.' IDENTIFIER

  106 MethodCall: Name '(' ArgListOpt ')'
  107           | Name '{' ArgListOpt '}'
  108           | Primary '.' IDENTIFIER '(' ArgListOpt ')'
  109           | Primary '.' IDENTIFIER '{' ArgListOpt '}'

  110 PostFixExpr: Primary
  111            | Name

  112 UnaryExpr: '-' UnaryExpr
  113          | '!' UnaryExpr
  114          | PostFixExpr

  115 MulExpr: UnaryExpr
  116        | MulExpr '*' UnaryExpr
  117        | MulExpr '/' UnaryExpr
  118        | MulExpr '%' UnaryExpr

  119 AddExpr: MulExpr
  120        | AddExpr '+' MulExpr
  121        | AddExpr '-' MulExpr

  122 RelOp: LESSEQUAL
  123      | GREATEREQUAL
  124      | '<'
  125      | '>'

  126 RelExpr: AddExpr
  127        | RelExpr RelOp AddExpr

  128 EqExpr: RelExpr
  129       | EqExpr EQUALEQUAL RelExpr
  130       | EqExpr NOTEQUAL RelExpr

  131 CondAndExpr: EqExpr
  132            | CondAndExpr ANDAND EqExpr

  133 CondOrExpr: CondAndExpr
  134           | CondOrExpr OROR CondAndExpr

  135 Expr: CondOrExpr
  136     | Assignment
  137     | ArrayInit
  138     | InstncExpr
  139     | Cast
  140     | ObjectInt

  141 Assignment: LeftHandSide AssignOp Expr

  142 LeftHandSide: Name
  143             | Type Name
  144             | FieldAccess

  145 AssignOp: '='
  146         | ADDADD
  147         | SUBSUB
  148         | MULMUL
  149         | DIVDIV
  150         | MODMOD

  151 SpecialName: Name INCREMENT
  152            | Name DECREMENT
  153            | Name OPENCLOSE
  154            | Name '[' Expr ']'

  155 SwitchBlock: SWITCH '(' Name ')' '{' CaseBlock '}'

  156 CaseBlock: CaseList Stmt BREAK ';'
  157          | CaseBlock CaseList Stmt BREAK ';'
  158          | CaseBlock DEFAULT ':' Stmt

  159 CaseList: CaseHead
  160         | CaseList CaseHead

  161 CaseHead: CASE NumBase ':'

  162 ArrayDec: ArrayLeft ArrayRight

  163 ArrayLeft: IDENTIFIER OPENCLOSE IDENTIFIER
  164          | INT OPENCLOSE IDENTIFIER
  165          | DOUBLE OPENCLOSE IDENTIFIER
  166          | BOOL OPENCLOSE IDENTIFIER
  167          | STRING OPENCLOSE IDENTIFIER
  168          | CHAR OPENCLOSE IDENTIFIER
  169          | FLOAT OPENCLOSE IDENTIFIER
  170          | LONG OPENCLOSE IDENTIFIER

  171 ArrayRight: '=' NEW ArrayInit ';'
  172           | '=' '{' LiteralList '}' ';'
  173           | ';'

  174 LiteralList: Literal ','
  175            | Literal
  176            | LiteralList Literal
  177            | LiteralList Literal ','
  178            | %empty

  179 ArrayInit: NEW IDENTIFIER '[' NumBase ']'
  180          | NEW INT '[' NumBase ']'
  181          | NEW DOUBLE '[' NumBase ']'
  182          | NEW BOOL '[' NumBase ']'
  183          | NEW STRING '[' NumBase ']'
  184          | NEW CHAR '[' NumBase ']'
  185          | NEW FLOAT '[' NumBase ']'
  186          | NEW LONG '[' NumBase ']'

  187 InstncExpr: Name INSTANCEOF Name

  188 ObjectInt: NEW Name '(' ')'

  189 Cast: CAST Name

  190 NumBase: LINT
  191        | HEX
  192        | OCT


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 113
    '%' (37) 118
    '(' (40) 33 41 69 70 71 72 76 77 91 102 106 108 155 188
    ')' (41) 33 41 69 70 71 72 76 77 91 102 106 108 155 188
    '*' (42) 116
    '+' (43) 120
    ',' (44) 23 37 86 104 174 177
    '-' (45) 112 121
    '.' (46) 20 105 108 109
    '/' (47) 117
    ':' (58) 158 161
    ';' (59) 9 50 53 64 77 87 88 89 156 157 171 172 173
    '<' (60) 124
    '=' (61) 145 171 172
    '>' (62) 125
    '[' (91) 154 179 180 181 182 183 184 185 186
    ']' (93) 154 179 180 181 182 183 184 185 186
    '{' (123) 2 3 44 45 107 109 155 172
    '}' (125) 2 3 44 45 107 109 155 172
    error (256)
    BREAK <treeptr> (258) 87 88 156 157
    DOUBLE <treeptr> (259) 11 165 181
    ELSE <treeptr> (260) 70 72 75
    FOR <treeptr> (261) 77
    IF <treeptr> (262) 69 70 71 72
    INT <treeptr> (263) 10 164 180
    RETURN <treeptr> (264) 89
    VOID <treeptr> (265) 26
    WHILE <treeptr> (266) 76
    IDENTIFIER <treeptr> (267) 1 17 18 20 33 41 88 105 108 109 163 164 165 166 167 168 169 170 179
    CLASSNAME <treeptr> (268)
    CLASS <treeptr> (269) 1
    STRING <treeptr> (270) 13 167 183
    BOOL <treeptr> (271) 12 166 182
    LINT <treeptr> (272) 94 190
    LDOUBLE <treeptr> (273) 95
    LSTRING <treeptr> (274) 97
    LBOOL <treeptr> (275) 96
    LCHAR <treeptr> (276) 98
    NULLVAL <treeptr> (277) 101
    LESSEQUAL <treeptr> (278) 122
    GREATEREQUAL <treeptr> (279) 123
    GREATER <treeptr> (280)
    LESS <treeptr> (281)
    EQUALEQUAL <treeptr> (282) 129
    NOTEQUAL <treeptr> (283) 130
    ANDAND <treeptr> (284) 132
    OROR <treeptr> (285) 134
    EQUAL <treeptr> (286)
    ADDADD <treeptr> (287) 146
    SUBSUB <treeptr> (288) 147
    MULMUL <treeptr> (289) 148
    DIVDIV <treeptr> (290) 149
    MODMOD <treeptr> (291) 150
    PUBLIC <treeptr> (292) 1 31 102
    STATIC <treeptr> (293) 29
    HEX <treeptr> (294) 99 191
    OCT <treeptr> (295) 100 192
    OPENCLOSE <treeptr> (296) 153 163 164 165 166 167 168 169 170
    CASE <treeptr> (297) 161
    CHAR <treeptr> (298) 14 168 184
    CONTINUE <treeptr> (299)
    DEFAULT <treeptr> (300) 158
    FLOAT <treeptr> (301) 15 169 185
    INSTANCEOF <treeptr> (302) 187
    LONG <treeptr> (303) 16 170 186
    NEW <treeptr> (304) 171 179 180 181 182 183 184 185 186 188
    SWITCH <treeptr> (305) 155
    ADDEQUAL <treeptr> (306)
    SUBEQUAL <treeptr> (307)
    INCREMENT <treeptr> (308) 151
    DECREMENT <treeptr> (309) 152
    ISEQUALTO <treeptr> (310)
    NOTEQUALTO <treeptr> (311)
    GREATHERTHANOREQUAL <treeptr> (312)
    GREATERTHANOREQUAL <treeptr> (313)
    LESSTHANOREQUAL <treeptr> (314)
    LOGICALAND <treeptr> (315)
    LOGICALOR <treeptr> (316)
    CAST <treeptr> (317) 189
    MULT <treeptr> (318)
    DIVIDE <treeptr> (319)
    MOD <treeptr> (320)


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    ClassDecl <treeptr> (86)
        on left: 1
        on right: 0
    ClassBody <treeptr> (87)
        on left: 2 3
        on right: 1
    ClassBodyDecls <treeptr> (88)
        on left: 4 5
        on right: 2 5
    ClassBodyDecl <treeptr> (89)
        on left: 6 7 8
        on right: 4 5
    FieldDecl <treeptr> (90)
        on left: 9
        on right: 6
    Type <treeptr> (91)
        on left: 10 11 12 13 14 15 16 17
        on right: 9 25 38 51 143
    Name <treeptr> (92)
        on left: 18 19
        on right: 20 24 102 106 107 111 142 143 151 152 153 154 155 187 188 189
    QualifiedName <treeptr> (93)
        on left: 20 21
        on right: 19
    VarDecls <treeptr> (94)
        on left: 22 23
        on right: 9 23 51
    VarDeclarator <treeptr> (95)
        on left: 24
        on right: 22 23 38
    MethodReturnVal <treeptr> (96)
        on left: 25 26
        on right: 28
    MethodDecl <treeptr> (97)
        on left: 27
        on right: 7
    MethodHeader <treeptr> (98)
        on left: 28
        on right: 27
    StaticStatus <treeptr> (99)
        on left: 29 30
        on right: 28
    PublicStatus <treeptr> (100)
        on left: 31 32
        on right: 28 39
    MethodDeclarator <treeptr> (101)
        on left: 33
        on right: 28
    FormalParmListOpt <treeptr> (102)
        on left: 34 35
        on right: 33 41
    FormalParmList <treeptr> (103)
        on left: 36 37
        on right: 34 37
    FormalParm <treeptr> (104)
        on left: 38
        on right: 36 37
    ConstructorDecl <treeptr> (105)
        on left: 39 40
        on right: 8
    ConstructorDeclarator <treeptr> (106)
        on left: 41
        on right: 39 40
    ArgListOpt <treeptr> (107)
        on left: 42 43
        on right: 102 106 107 108 109
    Block <treeptr> (108)
        on left: 44 45
        on right: 27 39 40 52 69 70 71 72 77
    BlockStmts <treeptr> (109)
        on left: 46 47
        on right: 44 47
    BlockStmt <treeptr> (110)
        on left: 48 49
        on right: 46 47
    LocalVarDeclStmt <treeptr> (111)
        on left: 50
        on right: 48
    LocalVarDecl <treeptr> (112)
        on left: 51
        on right: 50 79
    Stmt <treeptr> (113)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 49 76 156 157 158
    ExprStmt <treeptr> (114)
        on left: 64
        on right: 54
    StmtExpr <treeptr> (115)
        on left: 65 66 67 68
        on right: 64 85 86
    IfThenStmt <treeptr> (116)
        on left: 69
        on right: 57 75
    IfThenElseStmt <treeptr> (117)
        on left: 70
        on right: 58
    IfThenElseIfStmt <treeptr> (118)
        on left: 71 72
        on right: 59
    ElseIfSequence <treeptr> (119)
        on left: 73 74
        on right: 71 72 74
    ElseIfStmt <treeptr> (120)
        on left: 75
        on right: 73 74
    WhileStmt <treeptr> (121)
        on left: 76
        on right: 60
    ForStmt <treeptr> (122)
        on left: 77
        on right: 61
    ForInit <treeptr> (123)
        on left: 78 79 80
        on right: 77
    ExprOpt <treeptr> (124)
        on left: 81 82
        on right: 77 89
    ForUpdate <treeptr> (125)
        on left: 83 84
        on right: 77
    StmtExprList <treeptr> (126)
        on left: 85 86
        on right: 78 83 86
    BreakStmt <treeptr> (127)
        on left: 87 88
        on right: 55
    ReturnStmt <treeptr> (128)
        on left: 89
        on right: 56
    Primary <treeptr> (129)
        on left: 90 91 92 93
        on right: 105 108 109 110
    Literal <treeptr> (130)
        on left: 94 95 96 97 98 99 100 101
        on right: 90 174 175 176 177
    InstantiationExpr <treeptr> (131)
        on left: 102
        on right: 67
    ArgList <treeptr> (132)
        on left: 103 104
        on right: 42 104
    FieldAccess <treeptr> (133)
        on left: 105
        on right: 92 144
    MethodCall <treeptr> (134)
        on left: 106 107 108 109
        on right: 66 93
    PostFixExpr <treeptr> (135)
        on left: 110 111
        on right: 114
    UnaryExpr <treeptr> (136)
        on left: 112 113 114
        on right: 112 113 115 116 117 118
    MulExpr <treeptr> (137)
        on left: 115 116 117 118
        on right: 116 117 118 119 120 121
    AddExpr <treeptr> (138)
        on left: 119 120 121
        on right: 120 121 126 127
    RelOp <treeptr> (139)
        on left: 122 123 124 125
        on right: 127
    RelExpr <treeptr> (140)
        on left: 126 127
        on right: 127 128 129 130
    EqExpr <treeptr> (141)
        on left: 128 129 130
        on right: 129 130 131 132
    CondAndExpr <treeptr> (142)
        on left: 131 132
        on right: 132 133 134
    CondOrExpr <treeptr> (143)
        on left: 133 134
        on right: 134 135
    Expr <treeptr> (144)
        on left: 135 136 137 138 139 140
        on right: 69 70 71 72 76 81 91 103 104 141 154
    Assignment <treeptr> (145)
        on left: 141
        on right: 65 136
    LeftHandSide <treeptr> (146)
        on left: 142 143 144
        on right: 141
    AssignOp <treeptr> (147)
        on left: 145 146 147 148 149 150
        on right: 141
    SpecialName <treeptr> (148)
        on left: 151 152 153 154
        on right: 21 68
    SwitchBlock <treeptr> (149)
        on left: 155
        on right: 62
    CaseBlock <treeptr> (150)
        on left: 156 157 158
        on right: 155 157 158
    CaseList <treeptr> (151)
        on left: 159 160
        on right: 156 157 160
    CaseHead <treeptr> (152)
        on left: 161
        on right: 159 160
    ArrayDec <treeptr> (153)
        on left: 162
        on right: 63
    ArrayLeft <treeptr> (154)
        on left: 163 164 165 166 167 168 169 170
        on right: 162
    ArrayRight <treeptr> (155)
        on left: 171 172 173
        on right: 162
    LiteralList <treeptr> (156)
        on left: 174 175 176 177 178
        on right: 172 176 177
    ArrayInit <treeptr> (157)
        on left: 179 180 181 182 183 184 185 186
        on right: 137 171
    InstncExpr <treeptr> (158)
        on left: 187
        on right: 138
    ObjectInt <treeptr> (159)
        on left: 188
        on right: 140
    Cast <treeptr> (160)
        on left: 189
        on right: 139
    NumBase <treeptr> (161)
        on left: 190 191 192
        on right: 161 179 180 181 182 183 184 185 186


State 0

    0 $accept: . ClassDecl $end

    PUBLIC  shift, and go to state 1

    ClassDecl  go to state 2


State 1

    1 ClassDecl: PUBLIC . CLASS IDENTIFIER ClassBody

    CLASS  shift, and go to state 3


State 2

    0 $accept: ClassDecl . $end

    $end  shift, and go to state 4


State 3

    1 ClassDecl: PUBLIC CLASS . IDENTIFIER ClassBody

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: ClassDecl $end .

    $default  accept


State 5

    1 ClassDecl: PUBLIC CLASS IDENTIFIER . ClassBody

    '{'  shift, and go to state 6

    ClassBody  go to state 7


State 6

    2 ClassBody: '{' . ClassBodyDecls '}'
    3          | '{' . '}'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    PUBLIC      shift, and go to state 13
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16
    '}'         shift, and go to state 17

    DOUBLE      [reduce using rule 32 (PublicStatus)]
    INT         [reduce using rule 32 (PublicStatus)]
    IDENTIFIER  [reduce using rule 32 (PublicStatus)]
    STRING      [reduce using rule 32 (PublicStatus)]
    BOOL        [reduce using rule 32 (PublicStatus)]
    CHAR        [reduce using rule 32 (PublicStatus)]
    FLOAT       [reduce using rule 32 (PublicStatus)]
    LONG        [reduce using rule 32 (PublicStatus)]
    $default    reduce using rule 32 (PublicStatus)

    ClassBodyDecls         go to state 18
    ClassBodyDecl          go to state 19
    FieldDecl              go to state 20
    Type                   go to state 21
    MethodDecl             go to state 22
    MethodHeader           go to state 23
    PublicStatus           go to state 24
    ConstructorDecl        go to state 25
    ConstructorDeclarator  go to state 26


State 7

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 1 (ClassDecl)


State 8

   11 Type: DOUBLE .

    $default  reduce using rule 11 (Type)


State 9

   10 Type: INT .

    $default  reduce using rule 10 (Type)


State 10

   17 Type: IDENTIFIER .
   41 ConstructorDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 27

    $default  reduce using rule 17 (Type)


State 11

   13 Type: STRING .

    $default  reduce using rule 13 (Type)


State 12

   12 Type: BOOL .

    $default  reduce using rule 12 (Type)


State 13

   31 PublicStatus: PUBLIC .

    $default  reduce using rule 31 (PublicStatus)


State 14

   14 Type: CHAR .

    $default  reduce using rule 14 (Type)


State 15

   15 Type: FLOAT .

    $default  reduce using rule 15 (Type)


State 16

   16 Type: LONG .

    $default  reduce using rule 16 (Type)


State 17

    3 ClassBody: '{' '}' .

    $default  reduce using rule 3 (ClassBody)


State 18

    2 ClassBody: '{' ClassBodyDecls . '}'
    5 ClassBodyDecls: ClassBodyDecls . ClassBodyDecl

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    IDENTIFIER  shift, and go to state 10
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    PUBLIC      shift, and go to state 13
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16
    '}'         shift, and go to state 28

    DOUBLE      [reduce using rule 32 (PublicStatus)]
    INT         [reduce using rule 32 (PublicStatus)]
    IDENTIFIER  [reduce using rule 32 (PublicStatus)]
    STRING      [reduce using rule 32 (PublicStatus)]
    BOOL        [reduce using rule 32 (PublicStatus)]
    CHAR        [reduce using rule 32 (PublicStatus)]
    FLOAT       [reduce using rule 32 (PublicStatus)]
    LONG        [reduce using rule 32 (PublicStatus)]
    $default    reduce using rule 32 (PublicStatus)

    ClassBodyDecl          go to state 29
    FieldDecl              go to state 20
    Type                   go to state 21
    MethodDecl             go to state 22
    MethodHeader           go to state 23
    PublicStatus           go to state 24
    ConstructorDecl        go to state 25
    ConstructorDeclarator  go to state 26


State 19

    4 ClassBodyDecls: ClassBodyDecl .

    $default  reduce using rule 4 (ClassBodyDecls)


State 20

    6 ClassBodyDecl: FieldDecl .

    $default  reduce using rule 6 (ClassBodyDecl)


State 21

    9 FieldDecl: Type . VarDecls ';'

    IDENTIFIER  shift, and go to state 30

    Name           go to state 31
    QualifiedName  go to state 32
    VarDecls       go to state 33
    VarDeclarator  go to state 34
    SpecialName    go to state 35


State 22

    7 ClassBodyDecl: MethodDecl .

    $default  reduce using rule 7 (ClassBodyDecl)


State 23

   27 MethodDecl: MethodHeader . Block

    '{'  shift, and go to state 36

    Block  go to state 37


State 24

   28 MethodHeader: PublicStatus . StaticStatus MethodReturnVal MethodDeclarator
   39 ConstructorDecl: PublicStatus . ConstructorDeclarator Block

    IDENTIFIER  shift, and go to state 38
    STATIC      shift, and go to state 39

    IDENTIFIER  [reduce using rule 30 (StaticStatus)]
    $default    reduce using rule 30 (StaticStatus)

    StaticStatus           go to state 40
    ConstructorDeclarator  go to state 41


State 25

    8 ClassBodyDecl: ConstructorDecl .

    $default  reduce using rule 8 (ClassBodyDecl)


State 26

   40 ConstructorDecl: ConstructorDeclarator . Block

    '{'  shift, and go to state 36

    Block  go to state 42


State 27

   41 ConstructorDeclarator: IDENTIFIER '(' . FormalParmListOpt ')'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    IDENTIFIER  shift, and go to state 43
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16

    $default  reduce using rule 35 (FormalParmListOpt)

    Type               go to state 44
    FormalParmListOpt  go to state 45
    FormalParmList     go to state 46
    FormalParm         go to state 47


State 28

    2 ClassBody: '{' ClassBodyDecls '}' .

    $default  reduce using rule 2 (ClassBody)


State 29

    5 ClassBodyDecls: ClassBodyDecls ClassBodyDecl .

    $default  reduce using rule 5 (ClassBodyDecls)


State 30

   18 Name: IDENTIFIER .

    $default  reduce using rule 18 (Name)


State 31

   20 QualifiedName: Name . '.' IDENTIFIER
   24 VarDeclarator: Name .
  151 SpecialName: Name . INCREMENT
  152            | Name . DECREMENT
  153            | Name . OPENCLOSE
  154            | Name . '[' Expr ']'

    OPENCLOSE  shift, and go to state 48
    INCREMENT  shift, and go to state 49
    DECREMENT  shift, and go to state 50
    '.'        shift, and go to state 51
    '['        shift, and go to state 52

    $default  reduce using rule 24 (VarDeclarator)


State 32

   19 Name: QualifiedName .

    $default  reduce using rule 19 (Name)


State 33

    9 FieldDecl: Type VarDecls . ';'
   23 VarDecls: VarDecls . ',' VarDeclarator

    ';'  shift, and go to state 53
    ','  shift, and go to state 54


State 34

   22 VarDecls: VarDeclarator .

    $default  reduce using rule 22 (VarDecls)


State 35

   21 QualifiedName: SpecialName .

    $default  reduce using rule 21 (QualifiedName)


State 36

   44 Block: '{' . BlockStmts '}'
   45      | '{' . '}'

    BREAK       shift, and go to state 55
    DOUBLE      shift, and go to state 56
    FOR         shift, and go to state 57
    IF          shift, and go to state 58
    INT         shift, and go to state 59
    RETURN      shift, and go to state 60
    WHILE       shift, and go to state 61
    IDENTIFIER  shift, and go to state 62
    STRING      shift, and go to state 63
    BOOL        shift, and go to state 64
    LINT        shift, and go to state 65
    LDOUBLE     shift, and go to state 66
    LSTRING     shift, and go to state 67
    LBOOL       shift, and go to state 68
    LCHAR       shift, and go to state 69
    NULLVAL     shift, and go to state 70
    PUBLIC      shift, and go to state 71
    HEX         shift, and go to state 72
    OCT         shift, and go to state 73
    CHAR        shift, and go to state 74
    FLOAT       shift, and go to state 75
    LONG        shift, and go to state 76
    SWITCH      shift, and go to state 77
    '{'         shift, and go to state 36
    '}'         shift, and go to state 78
    ';'         shift, and go to state 79
    '('         shift, and go to state 80

    Type               go to state 81
    Name               go to state 82
    QualifiedName      go to state 32
    Block              go to state 83
    BlockStmts         go to state 84
    BlockStmt          go to state 85
    LocalVarDeclStmt   go to state 86
    LocalVarDecl       go to state 87
    Stmt               go to state 88
    ExprStmt           go to state 89
    StmtExpr           go to state 90
    IfThenStmt         go to state 91
    IfThenElseStmt     go to state 92
    IfThenElseIfStmt   go to state 93
    WhileStmt          go to state 94
    ForStmt            go to state 95
    BreakStmt          go to state 96
    ReturnStmt         go to state 97
    Primary            go to state 98
    Literal            go to state 99
    InstantiationExpr  go to state 100
    FieldAccess        go to state 101
    MethodCall         go to state 102
    Assignment         go to state 103
    LeftHandSide       go to state 104
    SpecialName        go to state 105
    SwitchBlock        go to state 106
    ArrayDec           go to state 107
    ArrayLeft          go to state 108


State 37

   27 MethodDecl: MethodHeader Block .

    $default  reduce using rule 27 (MethodDecl)


State 38

   41 ConstructorDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 27


State 39

   29 StaticStatus: STATIC .

    $default  reduce using rule 29 (StaticStatus)


State 40

   28 MethodHeader: PublicStatus StaticStatus . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 109
    IDENTIFIER  shift, and go to state 43
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16

    Type             go to state 110
    MethodReturnVal  go to state 111


State 41

   39 ConstructorDecl: PublicStatus ConstructorDeclarator . Block

    '{'  shift, and go to state 36

    Block  go to state 112


State 42

   40 ConstructorDecl: ConstructorDeclarator Block .

    $default  reduce using rule 40 (ConstructorDecl)


State 43

   17 Type: IDENTIFIER .

    $default  reduce using rule 17 (Type)


State 44

   38 FormalParm: Type . VarDeclarator

    IDENTIFIER  shift, and go to state 30

    Name           go to state 31
    QualifiedName  go to state 32
    VarDeclarator  go to state 113
    SpecialName    go to state 35


State 45

   41 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt . ')'

    ')'  shift, and go to state 114


State 46

   34 FormalParmListOpt: FormalParmList .
   37 FormalParmList: FormalParmList . ',' FormalParm

    ','  shift, and go to state 115

    $default  reduce using rule 34 (FormalParmListOpt)


State 47

   36 FormalParmList: FormalParm .

    $default  reduce using rule 36 (FormalParmList)


State 48

  153 SpecialName: Name OPENCLOSE .

    $default  reduce using rule 153 (SpecialName)


State 49

  151 SpecialName: Name INCREMENT .

    $default  reduce using rule 151 (SpecialName)


State 50

  152 SpecialName: Name DECREMENT .

    $default  reduce using rule 152 (SpecialName)


State 51

   20 QualifiedName: Name '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 116


State 52

  154 SpecialName: Name '[' . Expr ']'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    IDENTIFIER  shift, and go to state 117
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    LINT        shift, and go to state 65
    LDOUBLE     shift, and go to state 66
    LSTRING     shift, and go to state 67
    LBOOL       shift, and go to state 68
    LCHAR       shift, and go to state 69
    NULLVAL     shift, and go to state 70
    HEX         shift, and go to state 72
    OCT         shift, and go to state 73
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16
    NEW         shift, and go to state 118
    CAST        shift, and go to state 119
    '-'         shift, and go to state 120
    '!'         shift, and go to state 121
    '('         shift, and go to state 80

    Type           go to state 122
    Name           go to state 123
    QualifiedName  go to state 32
    Primary        go to state 124
    Literal        go to state 99
    FieldAccess    go to state 101
    MethodCall     go to state 125
    PostFixExpr    go to state 126
    UnaryExpr      go to state 127
    MulExpr        go to state 128
    AddExpr        go to state 129
    RelExpr        go to state 130
    EqExpr         go to state 131
    CondAndExpr    go to state 132
    CondOrExpr     go to state 133
    Expr           go to state 134
    Assignment     go to state 135
    LeftHandSide   go to state 104
    SpecialName    go to state 35
    ArrayInit      go to state 136
    InstncExpr     go to state 137
    ObjectInt      go to state 138
    Cast           go to state 139


State 53

    9 FieldDecl: Type VarDecls ';' .

    $default  reduce using rule 9 (FieldDecl)


State 54

   23 VarDecls: VarDecls ',' . VarDeclarator

    IDENTIFIER  shift, and go to state 30

    Name           go to state 31
    QualifiedName  go to state 32
    VarDeclarator  go to state 140
    SpecialName    go to state 35


State 55

   87 BreakStmt: BREAK . ';'
   88          | BREAK . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 141
    ';'         shift, and go to state 142


State 56

   11 Type: DOUBLE .
  165 ArrayLeft: DOUBLE . OPENCLOSE IDENTIFIER

    OPENCLOSE  shift, and go to state 143

    $default  reduce using rule 11 (Type)


State 57

   77 ForStmt: FOR . '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

    '('  shift, and go to state 144


State 58

   69 IfThenStmt: IF . '(' Expr ')' Block
   70 IfThenElseStmt: IF . '(' Expr ')' Block ELSE Block
   71 IfThenElseIfStmt: IF . '(' Expr ')' Block ElseIfSequence
   72                 | IF . '(' Expr ')' Block ElseIfSequence ELSE Block

    '('  shift, and go to state 145


State 59

   10 Type: INT .
  164 ArrayLeft: INT . OPENCLOSE IDENTIFIER

    OPENCLOSE  shift, and go to state 146

    $default  reduce using rule 10 (Type)


State 60

   89 ReturnStmt: RETURN . ExprOpt ';'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    IDENTIFIER  shift, and go to state 117
    STRING      shift, and go to state 11
    BOOL        shift, and go to state 12
    LINT        shift, and go to state 65
    LDOUBLE     shift, and go to state 66
    LSTRING     shift, and go to state 67
    LBOOL       shift, and go to state 68
    LCHAR       shift, and go to state 69
    NULLVAL     shift, and go to state 70
    HEX         shift, and go to state 72
    OCT         shift, and go to state 73
    CHAR        shift, and go to state 14
    FLOAT       shift, and go to state 15
    LONG        shift, and go to state 16
    NEW         shift, and go to state 118
    CAST        shift, and go to state 119
    '-'         shift, and go to state 120
    '!'         shift, and go to state 121
    '('         shift, and go to state 80

    $default  reduce using rule 82 (ExprOpt)
